--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <option>₹209 - 22 Days - 1GB/day</option>
       <option>₹239 - 22 Days - 1.5GB/day</option>
       <option>₹299 - 28 Days - 1.5GB/day + SMS</option>
-      <option>₹629 - 56 Days - 2GB/day</option>
+      <option>₹629 - 56 Days - 2GB/day + 5g unlimited</option>
       <option>₹899 - 90 Days - 2GB/day + OTT</option>
       <option>₹999 - 98 Days - 2GB/day</option>
       <option>₹799 - 84 Days - 1.5GB/day</option>
